@@ -484,7 +484,6 @@
   '8Z' => '149,377',
   '8l' => '159',
   '9A' => '313',
-  '9A3A/4U' => '138',
   '9B' => '100',
   '9C' => '100',
   '9D' => '100,103',
@@ -1878,7 +1877,6 @@
   'T8' => '418',
   'T88' => '167',
   'T9' => '311',
-  'T93A/4U' => '138',
   'TA' => '232',
   'TB' => '232',
   'TC' => '232',
