@@ -139,7 +139,7 @@ Switzerland:              EU: 28: 14: HB:    HB=HE;
 Liechtenstein:            EU: 28: 14: HB0:   HB0=HE0;
 Ecuador:                  SA: 12: 10: HC:    HC=HD;
 Galapagos Is.:            SA: 12: 10: HC8:   HC8=HD8;
-Haiti:                    NA: 11: 08: HH:    4V=9A3A/4U=HH=T93A/4U;
+Haiti:                    NA: 11: 08: HH:    HH=4V;
 Dominican Republic:       NA: 11: 08: HI:    HI;
 Colombia:                 SA: 12: 09: HK:    5J=5K=HJ=HK;
 San Andres/Providencia:   NA: 11: 07: HK0/a: 5J0=5K0=HJ0=HK0;
